Updated map styling method

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -94,15 +94,23 @@ Control Room Log Map
                 
                 map.data.loadGeoJson('{{ path('map_json_data') }}');
                 
-                map.data.forEach(function(feature) {
-                    var image = 'http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%E2%80%A2|7CD300';
-                    var point = new google.maps.LatLng(feature.getProperty('coordinates'));
-                    var marker = new google.maps.Marker({
-                        position: point,
-                        title: '',
-                        icon: image,
-                        map: map
-                    });
+                //map.data.forEach(function(feature) {
+                    //var image = 'http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%E2%80%A2|7CD300';
+                    //var point = new google.maps.LatLng(feature.getProperty('coordinates'));
+                    //var marker = new google.maps.Marker({
+                        //position: point,
+                        //title: '',
+                        //icon: image,
+                        //map: map
+                    //});
+                //});
+                
+                map.data.setStyle(function(feature) {
+                    var severity = feature.getProperty('severity');
+                    var color = severity < 3 ? 'red' : 'blue';
+                    return {
+                      color: color                      
+                    };
                 });
 
                 var bounds = new google.maps.LatLngBounds(
