--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -105,7 +105,8 @@ Control Room Log Map
                     var color = feature.getProperty('color');
                     return {
                         fillColor: color,
-                        strokeWeight: 1
+                        strokeWeight: 1,
+                        icon: "http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%E2%80%A2|" + color
                     };
                 });
 
