--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -94,9 +94,12 @@ Control Room Log Map
                 
                 map.data.loadGeoJson('{{ path('map_json_data') }}');
                 
-                map.data.forEach(function(Feature) {
+                console.log("Loaded GeoJSON data!");
+                
+                map.data.forEach(function(feature) {
+                    console.log("Looping features!");
                     var image = 'http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%E2%80%A2|7CD300';
-                    setStyle(Feature,{
+                    setStyle(feature,{
                         icon: image
                     });
                 });
