Modifying map marker styling methods

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -117,7 +117,7 @@ Control Room Log Map
                     return {
                         //fillColor: color,
                         strokeWeight: 1,
-                        icon: "http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%E2%80%A2|7CD300";
+                        icon: "http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%E2%80%A2|7CD300"
                     };
                 });
                 
