Modified map marker method

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -113,11 +113,9 @@ Control Room Log Map
                 
                 
                 map.data.setStyle(function(feature) {
-                    //var color = feature.getProperty('color');
+                    var colour = feature.getProperty('colouer');
                     return {
-                        //fillColor: color,
-                        strokeWeight: 1,
-                        icon: "http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%E2%80%A2|7CD300"
+                        icon: "http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%E2%80%A2|" + colour
                     };
                 });
                 
