--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -113,7 +113,7 @@ Control Room Log Map
                 
                 
                 map.data.setStyle(function(feature) {
-                    var colour = feature.getProperty('colouer');
+                    var colour = feature.getProperty('colour');
                     return {
                         icon: "http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%E2%80%A2|" + colour
                     };
