Modified marker colour handling

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -115,7 +115,7 @@ Control Room Log Map
                 map.data.setStyle(function(feature) {
                     var colour = feature.getProperty('colour');
                     return {
-                        icon: "http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%E2%80%A2|" + colour
+                        icon: "https://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%E2%80%A2|" + colour
                     };
                 });
                 
