--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -92,13 +92,11 @@ Control Room Log Map
                 
                 map.data.setStyle(function(feature) {
                     var colour = feature.getProperty('colour');
+                    var zIndex = feature.getProperty('zIndex');
                     return {
                         icon: "https://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%E2%80%A2|" + colour
+                        zIndex: zIndex
                     };
-                });
-                
-                map.data.setZIndex(function(feature) {
-                    return feature.getProperty('zIndex');
                 });
 
                 var bounds = new google.maps.LatLngBounds(
