debugging map infowindows

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -95,7 +95,7 @@ Control Room Log Map
                     var infowindow = new google.maps.InfoWindow({
                         content: "This is an info window!"
                       });
-                    infowindow.open(map, feature);
+                    infowindow.open(map, event.feature);
                     
                 });
 
