debuggin info window method

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -95,7 +95,7 @@ Control Room Log Map
                     //var sec_type = event.feature.getProperty('sec_type');
                     
                     infowindow.setContent( "This is an info window");
-                    infowindow.open(map, event.feature.getGeometry().get());
+                    infowindow.open(map, event.feature.getGeometry());
                     
                 });
 
