--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -94,13 +94,12 @@ Control Room Log Map
                     //var med_type = event.feature.getProperty('med_type');
                     //var sec_type = event.feature.getProperty('sec_type');
                     var log = event.feature.getProperty(log);
-                    
-                    infowindow.setContent(
-                        "<h2>"+log['blurb']+"</h2>"
-                        "<p>"+log['log_entry_open_time']+"</p>"
-                        "<p>Location: "+log['location']+"</p>"
-                        "<p>Reported By: "+log['reported_by']+"</p>"
-                    );
+                    var content = '<div><h2>'+log['blurb']+'</h2>'+
+                        '<p>'+log['log_entry_open_time']+'</p>'+
+                        '<p>Location: '+log['location']+'</p>'+
+                        '<p>Reported By: '+log['reported_by']+'</p>'+
+                        '</div>';
+                    infowindow.setContent(content);
                     infowindow.setPosition(event.feature.getGeometry().get());
                     infowindow.setOptions({pixelOffset: new google.maps.Size(0,-30)});
                     infowindow.open(map);
