debugging map twig js

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -93,7 +93,7 @@ Control Room Log Map
                     //var med_severity = event.feature.getProperty('med_severity');
                     //var med_type = event.feature.getProperty('med_type');
                     //var sec_type = event.feature.getProperty('sec_type');
-                    var log = event.feature.getProperty(log);
+                    var log = event.feature.getProperty('log');
                     var content = '<div><h2>'+log['blurb']+'</h2>'+
                         '<p>'+log['log_entry_open_time']+'</p>'+
                         '<p>Location: '+log['location']+'</p>'+
